# skeleton

./: .gitignore  Makefile.in  README.md  Skeleton.mli  configure.ac  opam  options.ml  skeleton_run.ml
tests/: test_config
tests/skeleton/: basic.i
tests/skeleton/oracle/: basic.res.oracle
